# VisualChat

./: pyproject.toml  requirements.txt
CSharp/: VisuaChat.sln
CSharp/ChatServer/: Log.cs  Program.cs
CSharp/ChatServer/Controllers/: GeneralController.cs  OllamaController.cs  WhisperController.cs
CSharp/ChatServer/Properties/: launchSettings.json
CSharp/VisualChat/: Program.cs  VisualChat.csproj
CSharp/VisualChat/Layout/: NavMenu.razor
CSharp/VisualChat/wwwroot/: index.html
VisualChat/ChatServer/: ChatServer.csproj  ChatServer.http  Program.cs  RAGService.cs
VisualChat/ChatServer/Controllers/: ChromaController.cs  CustomController.cs  GeneralController.cs  OllamaController.cs  WebSocketController.cs  WhisperController.cs
VisualChat/TranscriptionServer/: faster-whisper_server.py  requirements.txt
VisualChat/VisualChat/: _Imports.razor
VisualChat/VisualChat/Pages/: Chat.razor
VisualChat/VisualChat/Properties/: launchSettings.json
src/VisualChat/: __main__.py
src/VisualChat/api/: audio.py
