[project]
name = "visualchat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "arrow (==1.3.0)",
    "av (==14.1.0)",
    "binaryornot (==0.4.4)",
    "blinker (==1.9.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "chardet (==5.2.0)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "coloredlogs (==15.0.1)",
    "cookiecutter (==2.6.0)",
    "crashtest (==0.4.1)",
    "ctranslate2 (==4.5.0)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastapi (==0.115.8)",
    "faster-whisper (==1.1.1)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "findpython (==0.6.2)",
    "flatbuffers (==25.1.24)",
    "fsspec (==2024.12.0)",
    "gunicorn (==23.0.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.28.1)",
    "humanfriendly (==10.0)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.5)",
    "keyring (==25.6.0)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.6.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "networkx (==3.3)",
    "numpy (==2.2.2)",
    "onnxruntime (==1.20.1)",
    "packaging (==24.2)",
    "pbs-installer (==2025.2.12)",
    "pillow (==11.0.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.6)",
    "poetry (==2.1.1)",
    "poetry-core (==2.1.1)",
    "protobuf (==5.29.3)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "pyproject-hooks (==1.2.0)",
    "pyreadline3 (==3.5.4)",
    "python-dateutil (==2.9.0.post0)",
    "python-slugify (==8.0.4)",
    "pywin32-ctypes (==0.2.3)",
    "pyyaml (==6.0.2)",
    "rapidfuzz (==3.12.1)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "rich (==13.9.4)",
    "scipy (==1.15.1)",
    "setuptools (==75.8.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sounddevice (==0.5.1)",
    "starlette (==0.45.3)",
    "sympy (==1.13.1)",
    "text-unidecode (==1.3)",
    "tokenizers (==0.21.0)",
    "tomlkit (==0.13.2)",
    "tqdm (==4.67.1)",
    "trove-classifiers (==2025.2.18.16)",
    "types-python-dateutil (==2.9.0.20241206)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.29.2)",
    "werkzeug (==3.1.3)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"